Fixed initial table header text overlapping in CaseFollowUp report

--- a/_attachments/css/coconut.css
+++ b/_attachments/css/coconut.css
@@ -151,7 +151,7 @@ table#alertsTable td.data{
 }
 
 .mdl-data-table {
-    table-layout:fixed;
+    /*table-layout:fixed; */
     width:99%; 
 }
 
